# simple

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  TODO.txt  base_func.cpp  base_func.h  bytecode.cpp  config.h  helper.h  interpreter.cpp  interpreter.h  main.cpp  simple.sln  token.cpp  token.h  update_library_paths.sh  vm.cpp  vm.h
.github/workflows/: build.yaml
dll_example/: Makefile  main.cpp  main_lib.h
examples/: add_simple_mods.simple  allocMemory.simple  createWin.simple  define.simple  exit.simple  functions.sbcc  functions.simple  import.simple  print.simple  table.simple  test.simple  variable.simple  while.simple  writeFile.simple
examples/lib_test/: maybe.simple
helpers/: README  tbl.simple
libs/: libmain_lib.dylib  main_lib.cpp  main_lib.h
libs/random/: Makefile  random.cpp  random.h
libs/sys/: Makefile  sys.cpp  sys.h
libs/table/: Makefile  table.cpp  table.h
simple/: CMakeLists.txt  Makefile  Node.cpp  base_func.cpp  base_func.h  bytecode.cpp  bytecode.h  config.h  glad.c  helper.cpp  helper.h  main.cpp  muParser.cpp  muParserBase.cpp  muParserBytecode.cpp  muParserCallback.cpp  muParserDLL.cpp  muParserError.cpp  muParserInt.cpp  muParserTest.cpp  muParserTokenReader.cpp  os_windows.cpp  simple.h  simple.vcxproj  simple.vcxproj.filters  test.cpp  tinyexpr.c  token.cpp  token.h  vm.cpp  vm.h
simple/include/glad/: glad.h
simple/libs/: libs.h
simple/libs/os/: os_header.h  os_linux.h  os_macos.h  os_windows.h
simple/table/: Node.h  NodeItem.h
simple/x64/Debug/: main.obj.enc  simple.exe.recipe  vc143.idb
simple/x64/Debug/simple.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  simple.lastbuildstate
test/: test.simple
tests/: print.simple  variable.simple
win/: Makefile  helper.h  obj_loader  obj_loader.cpp
